--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -11,5 +11,11 @@ $color-text: #333;
 $color-background: #FAFAFA;
 $color-border: #EEE;
 
+$color-el-grey-lighter: #F5F7FA;
+$color-el-grey-light: #DCDFE6;
+$color-el-blue: #409EFF;
+
+$font-size-text: 14px;
+
 $font-primary: 'montserrat';
 $font-stylized: 'caveat';
