--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -29,3 +29,19 @@
     fill: $color-3;
   }
 }
+
+.aside-logo-container {
+  width: 100%;
+  height: 100px;
+}
+
+.aside-panel-content {
+  padding: 0px 40px 40px 40px;
+
+  h2 {
+    color: $color-3;
+    font-size: 32px;
+    text-align: center;
+    font-family: $font-stylized;
+  }
+}
