--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,14 +1,15 @@
-$color-1: #176087;
+$color-1: #224B7A;
 $color-1-light: #80b9da;
 $color-2: #FFF;
 $color-2-hover: rgba($color-2, 0.3);
 $color-3: #35495e;
 $color-white: #FFF;
+$color-grey: #babcbc;
 $color-grey-dark: #666;
 $color-black: #000;
 
 $color-text: #333;
-$color-background: #FAFAFA;
+$color-background: #fafafa;
 $color-border: #EEE;
 
 $color-el-grey-lighter: #F5F7FA;
