--- a/assets/scss/titles.scss
+++ b/assets/scss/titles.scss
@@ -1,5 +1,6 @@
-h2, h3 {
+h2, h3, h4 {
   font-weight: 400;
+  color: $color-grey-dark;
 }
 
 h2 {
@@ -8,5 +9,12 @@ h2 {
 
 h3 {
   font-size: 20px;
-  color: $color-grey-dark;
+}
+
+h4 {
+  font-size: 18px;
+}
+
+h5 {
+  font-size: 16px;
 }
